src/css/site.css
/* ... */
.nav-panel-explore:not(.is-active) {
	padding-bottom: env(safe-area-inset-bottom);
}
.nav-panel-explore.is-active {
	flex-grow: 1;
}
.nav-panel-explore:not(:first-child) {
	top: auto;
	max-height: calc(50% + var(--toolbar-height));
}
.nav-panel-explore .context {
	font-size: 0.83333rem;
	flex-shrink: 0;
	color: var(--navbar-text-color-faint);
	box-shadow: 0 -1px 0 var(--navbar-shadow-color-2);
	padding: 0 0.5rem;
	display: flex;
	align-items: center;
	justify-content: space-between;
	line-height: 1;
	height: var(--toolbar-height);
	border-top: var(--toolbar-border-top);
	border-right: 1px solid var(--toolbar-border-top-color);
}
.nav-panel-explore:not(:first-child) .context {
	cursor: pointer;
}
.nav-panel-explore .context .version {
	display: flex;
	align-items: inherit;
}
.nav-panel-explore:first-child .context .version {
	visibility: hidden;
}
.nav-panel-explore .context .version::before {
	content: "Expand";
}
.nav-panel-explore.is-active .context .version::before {
	content: "Collapse";
}
.nav-panel-explore .context .version::after {
	content: "";
	background: var(--icon-path-chevron) no-repeat 100% / auto 100%;
	transform: scaleY(-1);
	justify-self: center;
	align-self: center;
	text-align: center;
	vertical-align: middle;
	width: 1.25em;
	height: 0.75em;
}
.nav-panel-explore.is-active .context .version::after {
	transform: none;
}

.nav-panel-explore .components {
	line-height: 1.6;
	flex-grow: 1;
	box-shadow: inset 0 1px 5px var(--navbar-shadow-color-2);
	background: var(--navbar-bg-color);
	padding: 0.5rem 0.75rem 0;
	margin: 0;
	overflow-y: scroll;
	overscroll-behavior: none;
	max-height: 100%;
	display: block;
}
.nav-panel-explore .components a:hover {
	color: var(--toolbar-link-hover-color);
}
.nav-panel-explore:not(.is-active) .components {
	display: none;
}
.nav-panel-explore .component {
	display: block;
}
.nav-panel-explore .component + .component {
	margin-top: 0.5rem;
}
.nav-panel-explore .component:last-child {
	margin-bottom: 0.75rem;
}
.nav-panel-explore .component .title {
	/* font-weight: var(); */
	font-variation-settings: "wght" var(--default-font-weight);
}
.nav-panel-explore .component.is-current .title {
	/* font-weight: var(); */
	font-variation-settings: "wght" var(--bold-font-weight);
}
.nav-panel-explore .versions {
	display: flex;
	flex-wrap: wrap;
	padding-left: 0;
	margin-top: -0.25rem;
	line-height: 1;
	list-style: none;
}

.nav-panel-explore .component .version {
	margin: 0.375rem 0.375rem 0 0;
}
.nav-panel-explore .component .version a {
	border: 1px solid var(--navbar-item-outline-color);
	border-radius: 0.25rem;
	opacity: 0.75;
	white-space: nowrap;
	padding: 0.125em 0.25em;
	display: inherit;
}
.nav-panel-explore .component .is-current a {
	border-color: currentColor;
	opacity: 0.9;
	/* font-weight: 500; */
	/* font-variation-settings: "wght" 500; */
}
@media screen and (max-width: 1023.5px) {
	aside.toc.sidebar {
		display: none;
	}
	main > .content {
		overflow-x: auto;
	}
}
@media screen and (min-width: 1024px) {
	main {
		flex: auto;
		min-width: 0;
	}
	main > .content {
		display: flex;
	}
	aside.toc.embedded {
		display: none;
	}
	aside.toc.sidebar {
		flex: 0 0 9rem;
		order: 1;
	}
}
@media screen and (min-width: 1216px) {
	aside.toc.sidebar {
		flex-basis: 12rem;
	}
}
.toolbar {
	color: var(--toolbar-text-color);
	align-items: center;
	background-color: var(--toolbar-bg-color);
	box-shadow: 0 1px 0 var(--navbar-shadow-color-2);
	border-top: var(--toolbar-border-top);
	display: flex;
	font-size: 0.83333rem;
	height: var(--toolbar-height);
	justify-content: flex-start;
	position: sticky;
	top: var(--header-bar-height);
	z-index: 20;
}
.toolbar a {
	color: inherit;
	text-decoration: underline;
	text-decoration-style: dotted;
}
.toolbar a:hover {
	color: var(--toolbar-link-hover-color);
	text-decoration-style: solid;
}
.nav-toggle {
	background: var(--icon-path-menu) no-repeat 50% 47.5%;
	background-size: 49%;
	border: none;
	outline: none;
	line-height: inherit;
	padding: 0;
	height: var(--toolbar-height);
	width: var(--toolbar-height);
	margin-right: -0.25rem;
}
@media screen and (min-width: 1024px) {
	.nav-toggle {
		display: none;
	}
}
.nav-toggle.is-active {
	background-image: var(--icon-path-back);
	background-size: 41.5%;
}
.home-link {
	/* display: none; */
	display: block;
	background: var(--icon-path-home-o) no-repeat 50%;
	height: 1.25rem;
	width: 1.25rem;
	margin: calc(0.625rem - 4px) 0.4rem 0.625rem 0.625rem;
	transition: none;
}
.home-link.is-current,
.home-link:hover {
	background-image: var(--icon-path-home);
}
.edit-this-page {
	display: none;
	padding-right: 0.5rem;
}
/* @media screen and (min-width: 1024px) {
	.edit-this-page {
		display: block;
	}
}
.toolbar .edit-this-page a {
	color: #8e8e8e;
} */
.breadcrumbs {
	display: none;
	flex: 1 1;
	padding: 0;
	line-height: 1;
}
@media screen and (min-width: 1024px) {
	.breadcrumbs {
		display: block;
	}
}
a + .breadcrumbs {
	padding-left: 0.05rem;
}
.breadcrumbs ul {
	display: flex;
	flex-wrap: wrap;
	gap: 0.5rem;
	margin: 0;
	padding: 0;
	list-style: none;
}
.breadcrumbs li {
	display: inline;
	margin: 0;
}
/* .breadcrumbs li::before {
	content: "/";
	display: inline-block;
	margin: 0 0.3rem 0 0.5rem;
} */
/* .breadcrumbs li:first-of-type::before {
	margin-left: 0;
} */
.page-versions {
	margin: 0 0.2rem 0 auto;
	position: relative;
	line-height: 1;
}
@media screen and (min-width: 1024px) {
	.page-versions {
		margin-right: 0.7rem;
	}
}
.page-versions .version-menu-toggle {
	color: inherit;
	background: var(--icon-path-chevron) no-repeat;
	background-position: right 0.5rem top 50%;
	background-size: auto 0.75em;
	border: none;
	outline: none;
	line-height: inherit;
	padding: 0.5rem 1.5rem 0.5rem 0.5rem;
	position: relative;
	z-index: 3;
}
/* ... */

